--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
+    "grunt": ">=0.4.5",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": ">=0.4.5"
+    "typescript": "^2.0.3"
   },
   "peerDependencies": {
     "typescript": "~2.0.3 || >=2.0.0-dev || >=2.1.0-dev"
